Fix image distortion

--- a/app/components/ProductGrid/styles/LargeGrid.scss
+++ b/app/components/ProductGrid/styles/LargeGrid.scss
@@ -6,7 +6,7 @@
 	display: flex;
 	flex-direction: column;
 	overflow: hidden;
-	box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 5px 0px;
+	box-shadow: 0rem 0.2rem 0.6rem 0rem hsla(0deg, 0%, 0%, 0.3);
 	max-width: 712px;
 
 	@media (min-width: $screen-phone-top-599) {
@@ -20,7 +20,6 @@
 		padding: 11px;
 		width: 100%;
 		min-height: 110px;
-		position: absolute;
 		left: 0;
 		bottom: 0;
 		box-sizing: border-box;
@@ -30,10 +29,8 @@
 			.headline {
 				font-size: 1.125rem;
 				font-weight: bold;
-				color: white;
 
 				@media(min-width: #{$screen-sm-min-600}) {
-					color: white;
 					margin: 0;
 					font-size: 1.2rem;
 				}
@@ -81,7 +78,7 @@
 		right: 0;
 		bottom: 0;
 
-		background: linear-gradient(to bottom, transparent 75%, black 120%);
+		// background: linear-gradient(to bottom, transparent 75%, black 120%);
 	}
 
 	@media (min-width: #{$screen-sm-min-600}) {
