--- a/app/routes/components/HorizontalProductsLayout/styles/HorizontalProductsLayout.css
+++ b/app/routes/components/HorizontalProductsLayout/styles/HorizontalProductsLayout.css
@@ -22,7 +22,6 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background: linear-gradient(to bottom, transparent 75%, black 120%);
 }
 
 .HorizontalGrid__image {
